@@ -13,6 +13,7 @@
 \item Added the alignCorpus() function to help prep unseen documents for fitNewDocuments()
 \item Thanks to Vincent Arel-Bundock for adding parallel computing to searchK 
 \item Long-overdue thanks to Stephen Woloszynek for fixing some bugs in thetaPosterior when local uncertainty is chosen.
+\item Setting max.em.its=0 will now return the results of the initialization procedure.
 }
 }
 \section{Version 1.2.3}{
